# gazelle-prebuilt

./: .bazelrc  .gitignore  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  filter.jq  release_notes.txt
.aspect/workflows/: config.yaml
.github/workflows/: ci.yaml  filter.jq  release.yaml  weekly-tag.yaml
example/: BUILD  MODULE.bazel  hello.proto  main.kt  starlark.bzl
patches/: aspect-cli.cgo-binding.patch  aspect-cli.only-kotlin-build.patch  aspect-cli.only-kotlin.patch  bazelbuild_bazel-gazelle_aspect-fs-direntry.patch  rules_python.patch  rules_python_gazelle_plugin.patch
