"Bazel dependencies"
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "gazelle_cc", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.4.1")

single_version_override(
    module_name = "gazelle",
    version = "0.43.0",
    patch_strip = 1,
    patches = ["patches/bazelbuild_bazel-gazelle_aspect-fs-direntry.patch"],
)

single_version_override(
    module_name = "rules_python_gazelle_plugin",
    version = "1.4.1",
    patch_strip = 2,
    patches = ["patches/rules_python.patch"],
)
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
# go_sdk.from_file(go_mod = "//:go.mod")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, with a specific version.
go_sdk.download(version = "1.23.1")
