"Bazel dependencies"
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "gazelle_cc", version = "0.1.0")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.0.0")
bazel_dep(name = "platforms", version = "1.0.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

go_sdk.download(version = "1.24.1")

single_version_override(
    module_name = "gazelle",
    version = "0.44.0",
    patch_strip = 1,
    patches = ["patches/bazelbuild_bazel-gazelle_aspect-fs-direntry.patch"],
)

single_version_override(
    module_name = "rules_python_gazelle_plugin",
    patch_strip = 2,
    patches = [
        "patches/rules_python.patch",
    ],
    version = "1.5.1",
)


# For cgo
include("//:llvm.MODULE.bazel")